--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.lifecycle_version = '2.1.0'
+    ext.lifecycle_version = '2.4.0'
     ext.rxbinding3 = '3.1.0'
     ext.nav_version = "2.3.5"
-    ext.work_version = "2.5.0"
+    ext.work_version = "2.7.0"
     ext.room = "2.3.0"
     ext.room_compiler = "2.2.5"
     ext.rx_java = "3.0.6"
@@ -14,25 +14,26 @@ buildscript {
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
     ext.retrofit_rx = "2.9.0"
-    ext.okhttp_log = "4.9.0"
-    ext.okhttp = "4.9.0"
+    ext.okhttp_log = "4.9.2"
+    ext.okhttp = "4.9.2"
     ext.junit = "4.13.2"
     ext.junit_android = "1.1.3"
     ext.espresso = "3.4.0"
 
     project.ext {
         min = 20
-        target = 30
-        compile = 30
+        target = 31
+        compile = 31
         tools = "30.0.2"
     }
 
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -44,6 +45,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
