--- a/mvi/build.gradle
+++ b/mvi/build.gradle
@@ -7,8 +7,6 @@ android {
     defaultConfig {
         minSdkVersion project.min
         targetSdkVersion project.target
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,8 +29,7 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:$rx_android"
 
     // lifecycle
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
 
     // navigation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
