--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.1.0-alpha05"
+        kotlinCompilerExtensionVersion = "1.2.0-alpha05"
     }
     buildTypes {
         release {
@@ -57,7 +57,7 @@ dependencies {
     implementation "androidx.compose.material:material:$composeVersion"
     implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
     implementation "androidx.compose.ui:ui-tooling:$composeVersion"
-    implementation "com.google.android.material:compose-theme-adapter:$composeVersion"
+    implementation "com.google.android.material:compose-theme-adapter:$composeVersionTheme"
 
     implementation "androidx.appcompat:appcompat:$compat"
 
@@ -65,8 +65,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.19.0"
 
     // navigation
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // image loading
     implementation 'io.coil-kt:coil-compose:1.3.0'
@@ -75,9 +75,9 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson"
 
     // hilt
-    implementation("com.google.dagger:hilt-android:2.38.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
-    implementation("androidx.hilt:hilt-navigation-fragment:$hilt_jetpack")
+    implementation "com.google.dagger:hilt-android:2.40"
+    kapt("com.google.dagger:hilt-android-compiler:2.40")
+    implementation "androidx.hilt:hilt-navigation-fragment:$hilt_jetpack"
     kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
     implementation 'androidx.hilt:hilt-work:1.0.0'
 
@@ -101,9 +101,9 @@ dependencies {
 
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 }
 
-kapt{
+kapt {
     correctErrorTypes true
 }
