--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.31'
-    ext.lifecycle_ktx = "2.3.1"
-    ext.nav_version = "2.3.5"
-    ext.work_version = "2.6.0"
-    ext.room = "2.3.0"
+    ext.kotlin_version = '1.6.10'
+    ext.lifecycle_ktx = "2.4.1"
+    ext.nav_version = "2.4.1"
+    ext.work_version = "2.7.1"
+    ext.room = "2.4.2"
     ext.room_compiler = "2.2.5"
-    ext.compat = "1.3.1"
+    ext.compat = "1.4.1"
     ext.gson = "2.8.6"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
-    ext.okhttp_log = "4.9.0"
-    ext.okhttp = "4.9.0"
+    ext.okhttp_log = "4.9.2"
+    ext.okhttp = "4.9.2"
     ext.junit = "4.13.2"
     ext.junit_android = "1.1.3"
     ext.espresso = "3.4.0"
-    ext.ktx = "1.6.0"
-    ext.coroutins = "1.5.0"
-    ext.composeVersion = "1.0.3"
-    ext.hilt = "2.38.1"
+    ext.ktx = "1.7.0"
+    ext.coroutines = "1.5.2"
+    ext.composeVersion = "1.1.1"
+    ext.composeVersionTheme = "1.1.5"
+    ext.hilt = "2.40"
     ext.hilt_jetpack = "1.0.0"
     ext.mockito_core = "3.7.0"
     ext.mockito_kotlin = "2.2.0"
@@ -27,9 +28,9 @@ buildscript {
 
     project.ext {
         min = 21
-        target = 30
-        compile = 30
-        tools = "30.0.2"
+        target = 31
+        compile = 31
+        tools = "30.0.3"
     }
 
     repositories {
@@ -38,10 +39,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
