--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -52,12 +52,12 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    // coroutins
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 
     // hilt
-    implementation("com.google.dagger:hilt-android:2.38.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+    implementation "com.google.dagger:hilt-android:2.40"
+    kapt("com.google.dagger:hilt-android-compiler:2.40")
     kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
 
     testImplementation "junit:junit:$junit"
