--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.2.0-alpha07"
+        kotlinCompilerExtensionVersion = "1.2.0-rc01"
     }
     buildTypes {
         release {
@@ -75,8 +75,8 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson"
 
     // hilt
-    implementation "com.google.dagger:hilt-android:2.40"
-    kapt("com.google.dagger:hilt-android-compiler:2.40")
+    implementation "com.google.dagger:hilt-android:2.42"
+    kapt("com.google.dagger:hilt-android-compiler:2.42")
     implementation "androidx.hilt:hilt-navigation-fragment:$hilt_jetpack"
     kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
     implementation 'androidx.hilt:hilt-work:1.0.0'
