--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.6.21' // because composeVersion 1.7.0
-    ext.lifecycle_ktx = "2.4.1"
-    ext.nav_version = "2.4.2"
+    ext.kotlin_version = '1.7.20' // update according to composeVersion
+    ext.compat = "1.5.1"
+    ext.nav_version = "2.5.3"
     ext.work_version = "2.7.1"
-    ext.room = "2.4.2"
+
+    ext.ktx = "1.9.0"
+    ext.coroutines = "1.6.4"
+    ext.lifecycle_ktx = "2.5.1"
+
+    ext.room = "2.4.3"
     ext.room_compiler = "2.2.5"
-    ext.compat = "1.4.2"
+
     ext.gson = "2.9.0"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
-    ext.okhttp_log = "4.9.3"
-    ext.okhttp = "4.9.3"
-    ext.junit = "4.13.2"
-    ext.junit_android = "1.1.3"
-    ext.espresso = "3.4.0"
-    ext.ktx = "1.8.0"
-    ext.coroutines = "1.6.1"
-    ext.composeVersion = "1.2.0-rc01" // update kotlinCompilerExtensionVersion when composeVersion updated
-    ext.composeVersionTheme = "1.1.11" // update kotlinCompilerExtensionVersion when composeVersionTheme updated
+    ext.okhttp_log = "4.10.0"
+    ext.okhttp = "4.10.0"
+
+    ext.composeVersion = "1.3.1"
+    // update kotlinCompilerExtensionVersion when composeVersion updated
+    ext.composeVersionTheme = "1.1.21"
+    // update kotlinCompilerExtensionVersion when composeVersionTheme updated
+
     ext.hilt = "2.42"
     ext.hilt_jetpack = "1.0.0"
-    ext.mockito_core = "4.3.1"
+
+    ext.junit = "4.13.2"
+    ext.junit_android = "1.1.3"
+    ext.mockito_core = "4.8.1"
     ext.mockito_kotlin = "2.2.0"
     ext.testing_core = "1.1.1"
     ext.testing_coroutine = "1.6.0"
+    ext.espresso = "3.4.0"
 
     project.ext {
         min = 21
-        target = 32
-        compile = 32
+        target = 33
+        compile = 33
         tools = "30.0.3"
     }
 
@@ -39,7 +47,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt"
