--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -30,6 +30,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    namespace 'com.mdgd.pokemon.models_impl'
 }
 
 dependencies {
