--- a/.github/workflows/u_tests.yml
+++ b/.github/workflows/u_tests.yml
@@ -15,8 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with: {java-version: 1.8}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
       - name: Run unit tests
         run: ./gradlew test --stacktrace
 
