--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.lifecycle_version = '2.4.0'
+    ext.lifecycle_version = '2.6.1'
     ext.rxbinding3 = '3.1.0'
-    ext.nav_version = "2.3.5"
-    ext.work_version = "2.7.1"
-    ext.room = "2.3.0"
-    ext.room_compiler = "2.2.5"
-    ext.rx_java = "3.1.2"
-    ext.rx_android = "3.0.0"
-    ext.compat = "1.4.0"
-    ext.gson = "2.8.6"
+    ext.nav_version = "2.5.3"
+    ext.work_version = "2.8.1"
+    ext.room = "2.5.1"
+    ext.room_compiler = "2.5.1"
+    ext.rx_java = "3.1.6"
+    ext.rx_android = "3.0.2"
+    ext.compat = "1.6.1"
+    ext.gson = "2.9.0"
     ext.guava = "28.0-android"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
@@ -17,8 +17,8 @@ buildscript {
     ext.okhttp_log = "4.9.2"
     ext.okhttp = "4.9.2"
     ext.junit = "4.13.2"
-    ext.junit_android = "1.1.3"
-    ext.espresso = "3.4.0"
+    ext.junit_android = "1.1.5"
+    ext.espresso = "3.5.1"
 
     project.ext {
         min = 20
@@ -33,8 +33,8 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath 'com.android.tools.build:gradle:8.0.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
