--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.room_compiler = "2.5.1"
     ext.rx_java = "3.1.6"
     ext.rx_android = "3.0.2"
+    ext.recycler = "1.3.0"
     ext.compat = "1.6.1"
     ext.gson = "2.9.0"
     ext.guava = "28.0-android"
