--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.work_version = "2.8.1"
     ext.room = "2.5.1"
     ext.room_compiler = "2.5.1"
+    ext.recycler = "1.3.0"
     ext.compat = "1.6.1"
     ext.gson = "2.9.0"
     ext.retrofit = "2.9.0"
