--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,14 @@ android {
 
 dependencies {
     implementation project(':mvi')
+    implementation project(':adapter')
     implementation project(':models')
     implementation project(':models_impl')
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.appcompat:appcompat:$compat"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation "androidx.recyclerview:recyclerview:$recycler"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.material:material:1.8.0'
 
