--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation "androidx.compose.material:material:$composeVersion"
     implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
     implementation "androidx.compose.ui:ui-tooling:$composeVersion"
-    implementation "com.google.android.material:compose-theme-adapter:$composeVersionTheme"
+    implementation "com.google.accompanist:accompanist-themeadapter-material:$composeVersionThemeMaterial"
 
     implementation "androidx.appcompat:appcompat:$compat"
 
