--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ buildscript {
 
     ext.composeVersion = "1.4.2"
     // update kotlinCompilerExtensionVersion when composeVersion updated
-    ext.composeVersionTheme = "1.2.1"
     // update kotlinCompilerExtensionVersion when composeVersionTheme updated
+    ext.composeVersionThemeMaterial = "0.30.1"
 
     ext.hilt = "2.42"
     ext.hilt_jetpack = "1.0.0"
